# nswtools

./: CMakeLists.txt  README.md
src/common/: patch.cpp  patch.h  string.cpp  string.h
src/max_elf_text/: CMakeLists.txt  max_elf_text.cpp
src/max_nsoheader_text/: CMakeLists.txt  max_nsoheader_text.cpp
src/patch_code/: CMakeLists.txt  patch_code.cpp
src/patch_elf/: CMakeLists.txt  patch_elf.cpp
